Fix z-index of tooltip

--- a/src/ui/styles/_barChart.scss
+++ b/src/ui/styles/_barChart.scss
@@ -77,6 +77,7 @@
 			background: $white;
 			clip-path: polygon(0 0, 100% 0, 100% 100%, calc(100% - var(--arrow-width)) calc(100% - var(--arrow-height)), 0 calc(100% - var(--arrow-height)));
 			color: currentColor;
+			z-index: 1;
 		}
 	}
 
